2013-11-23  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml (ov-new1.7.26): Add new section.

2013-11-12  Tom Schutter  <t.schutter@comcast.net>

	* faq-setup.xml (faq.setup.uninstall-service): Describe how to unhook
	cyglsa DLL from OS before uninstalling.

2013-11-11  Corinna Vinschen  <corinna@vinschen.de>

	* faq-setup.xml: Throughout remove setup.exe, use setup or setup-x86...
	instead.
	(faq.setup.cli): Reproduce latest --help output.
	(faq.setup.noroot): New section.
	(faq.setup.setup-fails-on-ts): Remove section.
	* setup-net.xml (internet-setup): Mention setup-x86{_64} in first
	paragraph.  Add note to allow using setup.exe in subsequent paragraphs.
	Add paragraph to introduce --no-admin option.

2013-11-06  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* Makefile.in: Fix problems accessing xidepend when configured with a
	(discouraged) relative path to source directory.

2013-08-23  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* new-features.xml (ov-new1.7.25): Change wording.

2013-08-23  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml (ov-new1.7.25): Add new section.

2013-08-14  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml (ov-new1.7.24): Add new section.  Mention
	posix_memalign override.

2013-07-26  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* new-features.xml (ov-new1.7.23): Add new section.  Mention wincmdln.
	* cygwinenv.xml: Mention wincmdln.

2013-07-25  Corinna Vinschen  <corinna@vinschen.de>

	* gcc.xml (gcc-64): Fix example.

2013-07-25  Corinna Vinschen  <corinna@vinschen.de>

	* gcc.xml (gcc-default: Rename from gcc-cons.  Change title.
	(gcc-64): New section explaininig differences in programming for
	64 bit Cygwin.
	(gcc-gui): Simplify description and aim at UNIX/Linux developers only.
	Note that X programming is preferred.  Drop example.

2013-07-21  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.sgml (ov-new1.7.22): Add GetCommandLine and regcomp
	changes.
