@@ -1,3 +1,8 @@
+2013-11-29  Corinna Vinschen  <corinna@vinschen.de>
+
+	* new-features.xml (ov-new1.7.26): Fix section ID and title.  Add
+	posix_spawn item.
+
 2013-11-23  Corinna Vinschen  <corinna@vinschen.de>
 
 	* new-features.xml (ov-new1.7.26): Add new section.
